--- a/README
+++ b/README
@@ -2,4 +2,4 @@ A partial course
 ================
 
 These are my lecture notes (Beamer slides) for my (small) part of an
-introductory course in Biostatistics.
+introductory course on biostatistics.
